# customer-churn-mlops-pipeline

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
configs/: batch_predict.yaml  champion.yaml  drift_report.yaml  eval.yaml  features.yaml  lightgbm_best.yaml  metrics.yaml  split.yaml  train_baseline.yaml  tune_lightgbm.yaml
data/raw/: README.md
docker/: Dockerfile  README.md
docs/: DRIFT.md  EDA_LEAKAGE_CHECKLIST.md  ML_PROJECT_ROADMAP.md  PROBLEM.md
notebooks/: 01_eda.ipynb  README.md
reports/: batch_predict_metadata.json  drift_report.html  drift_summary.json  eda_summary.json  eda_summary.md  evaluation_summary.json  evaluation_summary.md
scripts/: create_issues.sh  create_labels.sh  create_milestones.sh
src/churn_ml/: __init__.py  fsutil.py  metrics.py
src/churn_ml/batch_predict/: __init__.py  predict.py  row_model.py  run.py
src/churn_ml/data/: __init__.py  schema.py  split.py  validate.py
src/churn_ml/eda/: __init__.py  __main__.py  run.py  summary.py
src/churn_ml/evaluation/: __init__.py  evaluate.py  plots.py  run.py  threshold.py
src/churn_ml/features/: __init__.py  pipeline.py  run.py
src/churn_ml/models/: __init__.py  baseline.py  lightgbm_tune.py  run_baseline.py  run_lightgbm.py
src/churn_ml/monitoring/: __init__.py  drift.py  run_drift.py
src/churn_ml/serve/: __init__.py  app.py  cli.py  router.py  state.py
tests/: test_baseline.py  test_batch_predict.py  test_data_validation.py  test_drift.py  test_eda.py  test_evaluation.py  test_features.py  test_fsutil.py  test_lightgbm.py  test_metrics_contract.py  test_serve.py  test_split.py
tests/fixtures/: telco_sample.csv
