[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-ml"
version = "0.1.0"
description = "Telco customer churn — MLOps portfolio pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pandera>=0.20",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
]

[project.scripts]
churn-validate = "churn_ml.data.validate:cli"
churn-eda = "churn_ml.eda.run:cli"
churn-split = "churn_ml.data.split:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
